[gd_scene load_steps=26 format=3 uid="uid://bspl240ram4t6"]

[ext_resource type="Script" path="res://Scripts/Player_1.gd" id="1_cjuac"]
[ext_resource type="Shader" path="res://Shader/Player1Shader.gdshader" id="3_cqulb"]
[ext_resource type="Texture2D" uid="uid://yfybi4rw8n6l" path="res://Assets/players/Ladybug/Ladybug_down/Ladybug_down_1.png" id="3_q713y"]
[ext_resource type="Texture2D" uid="uid://cmmrr5c4r4ckx" path="res://Assets/players/Ladybug/Ladybug_down/Ladybug_down_2.png" id="4_0l4wk"]
[ext_resource type="Texture2D" uid="uid://cauxvj771bf4w" path="res://Assets/players/Ladybug/Ladybug_down/Ladybug_down_3.png" id="5_l0b1x"]
[ext_resource type="Texture2D" uid="uid://ct1a3p6rownmx" path="res://Assets/players/Ladybug/Ladybug_left/Ladybug_left_1.png" id="6_x7hw7"]
[ext_resource type="Texture2D" uid="uid://bro3f8k0baa7n" path="res://Assets/players/Ladybug/Ladybug_left/Ladybug_left_2.png" id="7_l7url"]
[ext_resource type="Texture2D" uid="uid://c4ud7vpihbnxm" path="res://Assets/players/Ladybug/Ladybug_left/Ladybug_left_3.png" id="8_0xhxo"]
[ext_resource type="Texture2D" uid="uid://dfepkodsrtsai" path="res://Assets/players/Ladybug/Ladybug_right/Ladgbug_right_2.png" id="9_oft5h"]
[ext_resource type="Texture2D" uid="uid://3d1bpe112nff" path="res://Assets/players/Ladybug/Ladybug_right/Ladgbug_right_3.png" id="10_uvo03"]
[ext_resource type="Texture2D" uid="uid://76hr5jp8ud3w" path="res://Assets/players/Ladybug/Ladybug_right/Ladybug_right_1.png" id="11_751mb"]
[ext_resource type="Texture2D" uid="uid://bp3prvd1ocksj" path="res://Assets/players/Ladybug/Ladybug_up/Ladybug_1.png" id="12_kgekh"]
[ext_resource type="Texture2D" uid="uid://dvbqdrajhd0cx" path="res://Assets/players/Ladybug/Ladybug_up/Ladybug_2.png" id="13_rlqo2"]
[ext_resource type="Texture2D" uid="uid://bf34o7voafftu" path="res://Assets/players/Ladybug/Ladybug_up/Ladybug_3.png" id="14_0l1b4"]
[ext_resource type="Script" path="res://Scripts/NewColors1.gd" id="14_g6x6x"]
[ext_resource type="AudioStream" uid="uid://bmskv7nbdi8xc" path="res://Assets/music-sfx/PlayerDamage.mp3" id="16_uhahv"]
[ext_resource type="AudioStream" uid="uid://opg3dvssuump" path="res://Assets/music-sfx/PowerUp.mp3" id="17_7pm7s"]
[ext_resource type="AudioStream" uid="uid://dxx8kkhxehvpu" path="res://Assets/music-sfx/BombDrop.mp3" id="18_osnrh"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_htwup"]
load_path = "res://.godot/imported/Player_Indicator.png-c6369a8dadc56a68937c9b1df19d10fc.ctex"

[sub_resource type="CircleShape2D" id="CircleShape2D_3x40r"]
radius = 7.07

[sub_resource type="ShaderMaterial" id="ShaderMaterial_meyc4"]
shader = ExtResource("3_cqulb")
shader_parameter/newColorBody = Color(0.898039, 0.231373, 0.266667, 1)
shader_parameter/oldColorBody = Color(0.898039, 0.231373, 0.266667, 1)
shader_parameter/newColorEyes = Color(1, 1, 1, 1)
shader_parameter/oldColorEyes = Color(1, 1, 1, 1)
shader_parameter/newColor1 = Color(0.917647, 0.729412, 0.309804, 1)
shader_parameter/oldColor1 = Color(0.917647, 0.729412, 0.309804, 1)
shader_parameter/newColor2 = null
shader_parameter/oldColor2 = null
shader_parameter/precision = 0.1
shader_parameter/onlyPickMainColor = null

[sub_resource type="SpriteFrames" id="SpriteFrames_g1aeq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q713y")
}, {
"duration": 1.0,
"texture": ExtResource("4_0l4wk")
}, {
"duration": 1.0,
"texture": ExtResource("5_l0b1x")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q713y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_x7hw7")
}, {
"duration": 1.0,
"texture": ExtResource("7_l7url")
}, {
"duration": 1.0,
"texture": ExtResource("8_0xhxo")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_oft5h")
}, {
"duration": 1.0,
"texture": ExtResource("10_uvo03")
}, {
"duration": 1.0,
"texture": ExtResource("11_751mb")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_kgekh")
}, {
"duration": 1.0,
"texture": ExtResource("13_rlqo2")
}, {
"duration": 1.0,
"texture": ExtResource("14_0l1b4")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_nepql"]
resource_name = "drop_bomb"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_rl5ij"]
resource_name = "take_damage"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0.00784314, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h302s"]
_data = {
"drop_bomb": SubResource("Animation_nepql"),
"take_damage": SubResource("Animation_rl5ij")
}

[node name="Player 1" type="CharacterBody2D" groups=["player"]]
z_index = 3
scale = Vector2(0.5, 0.5)
script = ExtResource("1_cjuac")

[node name="PlayerIndicatorSprite3D" type="Sprite2D" parent="."]
z_index = 3
position = Vector2(0, -20)
scale = Vector2(0.05, 0.05)
texture = SubResource("CompressedTexture2D_htwup")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3x40r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_meyc4")
sprite_frames = SubResource("SpriteFrames_g1aeq")
animation = &"down"
frame_progress = 0.305346
script = ExtResource("14_g6x6x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_h302s")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 28
limit_right = 607
limit_bottom = 480
limit_smoothed = true

[node name="BombDropTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ExplosionBoostTimer" type="Timer" parent="."]

[node name="GameMusic" type="Node2D" parent="."]

[node name="Damage_SFX" type="AudioStreamPlayer2D" parent="GameMusic"]
stream = ExtResource("16_uhahv")

[node name="Pickup_SFX" type="AudioStreamPlayer2D" parent="GameMusic"]
stream = ExtResource("17_7pm7s")

[node name="BombDrop_SFX" type="AudioStreamPlayer2D" parent="GameMusic"]
stream = ExtResource("18_osnrh")
volume_db = 5.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="BombDropTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ExplosionBoostTimer" to="." method="_on_explosion_boost_timer_timeout"]
